[package]
name = "ds_and_algos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true

[[bench]]
name = "singly_linked_lists"
harness = false

[[bench]]
name = "singly_and_doubly_linked_lists"
harness = false

[[bench]]
name = "get_last_value_linked_lists"
harness = false
